# plane_segmentation

plane_segmentation_interfaces/: CMakeLists.txt  package.xml
plane_segmentation_interfaces/msg/: PlaneResult.msg  PlaneResults.msg
plane_segmentation_node/: CMakeLists.txt  package.xml
plane_segmentation_node/launch/: segment.launch.py
plane_segmentation_node/plane_segmentation_node/: detection_server.py  plane_detector.py
plane_segmentation_node/plane_segmentation_node/utils/: _lib_ros_rgbd_pub_and_sub.py  lib_geo_trans.py  lib_io.py  lib_ransac.py
plane_segmentation_node/plane_segmentation_node/utils_rgbd/: lib_open3d.py  lib_plot_rgbd.py  lib_rgbd.py
plane_segmentation_node/scripts/: server
