<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plane_segmentation_interfaces</name>
  <version>2.0.0</version>

  <description>
    Messages for detecting planes from depth image.
  </description>
  <license>MIT</license>

  <author>feiyu</author>
  <maintainer email="pryre.dev@outlook.com">Kye Morton</maintainer>

  <url type="repository">https://github.com/pryre/plane_segmentation</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
